# ChangeLog for app-portage/layman
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.122 2011/02/08 03:53:11 sping Exp $

*layman-1.4.2 (08 Feb 2011)

  08 Feb 2011; Sebastian Pipping <sping@gentoo.org> +layman-1.4.2.ebuild:
  Bump to 1.4.2

  04 Jan 2011; Michael Weber <xmw@gentoo.org> layman-1.4.1.ebuild:
  sparc stable (bug 343309)

  03 Nov 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> layman-1.4.1.ebuild:
  x86 stable wrt bug #343309

  31 Oct 2010; Markos Chandras <hwoarang@gentoo.org> layman-1.4.1.ebuild:
  Stable on amd64 wrt bug #343309

*layman-1.4.1 (09 Jul 2010)

  09 Jul 2010; Sebastian Pipping <sping@gentoo.org> +layman-1.4.1.ebuild:
  Bump to 1.4.1

*layman-1.4.0 (08 Jul 2010)

  08 Jul 2010; Sebastian Pipping <sping@gentoo.org> +layman-1.4.0.ebuild:
  Bump to 1.4.0

*layman-1.3.4 (06 Jul 2010)

  06 Jul 2010; Sebastian Pipping <sping@gentoo.org> +layman-1.3.4.ebuild:
  Bump to 1.3.4

  06 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  layman-1.2.3.ebuild, layman-1.2.4-r3.ebuild, layman-1.2.5.ebuild,
  layman-1.2.6.ebuild, layman-1.3.0_rc1-r3.ebuild, layman-1.3.0.ebuild,
  layman-1.3.0-r1.ebuild, layman-1.3.1.ebuild, layman-1.3.2-r1.ebuild:
  Use PYTHON_DEPEND instead of NEED_PYTHON.

  28 Jun 2010; Guy Martin <gmsoft@gentoo.org> layman-1.3.3.ebuild:
  hppa stable.

  22 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  layman-1.2.3.ebuild, layman-1.2.4-r3.ebuild, layman-1.2.5.ebuild,
  layman-1.2.6.ebuild, layman-1.3.0_rc1-r3.ebuild, layman-1.3.0.ebuild,
  layman-1.3.0-r1.ebuild, layman-1.3.1.ebuild, layman-1.3.2-r1.ebuild,
  layman-1.3.2-r2.ebuild, layman-1.3.3.ebuild, layman-9999.ebuild:
  dev-util/subversion renamed to dev-vcs/subversion.

  19 Jun 2010; Jonathan Callen <abcd@gentoo.org> layman-1.3.0-r1.ebuild,
  layman-1.3.1.ebuild, layman-1.3.2-r1.ebuild, layman-1.3.2-r2.ebuild,