@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX layman-1.2.4-non-ascii-backport.patch 1654 RMD160 8260a9ca2b0d818e2f623bac6a53aee54f38f518 SHA1 9eea719e0d0f51a073f4fa5795dc4d886553b6fb SHA256 fec4eab473d2824876230267309463a8075fc6fcef2b8d363f1adf85bb3223d5
 AUX layman-1.2.4-peg-backport.patch 927 RMD160 f11d910e2ee20149d0c824929afc920c6facc34a SHA1 438d7da92544f1b09c419eb2cf7524ab91744a18 SHA256 06206de62729f07e8821c31e635ae1b73ccd43a88594ce90cb0bb58a472cf324
 AUX layman-1.3.0-cvs-fix.patch 2022 RMD160 7efb359ae59751eeb8aba33bd7a0d98be1e099e1 SHA1 7105538ad50a93c3807d2cedbaae8a5f3fbb10a9 SHA256 72362bfe82d9e03767641dbb1f8ecf84ad8e08605f14618fce88bf9635c9ec80
@@ -35,5 +38,16 @@ EBUILD layman-1.4.0.ebuild 2617 RMD160 8b2d1ae837949df15ea6cb6aef8df061c5be0771 
 EBUILD layman-1.4.1.ebuild 2612 RMD160 2700e01cc0954d2b315ffe6704bf1816bede4dd0 SHA1 7a1145962e062ec1bd92ad6e97311fdce8b1be25 SHA256 ae7b9b6a86b663cf5a6fe71a1721175412c84d7b3e9739e3623ebc585a979677
 EBUILD layman-1.4.2.ebuild 2662 RMD160 8dc5bc904c7e609f11f755100bb9263dfd4bdec1 SHA1 e417edc8f1ca543066b657e558058bbc45eca3af SHA256 1412363f4d3c1a5df27004c2d70306074b1fa48d920d332b49971776e3ba40ec
 EBUILD layman-9999.ebuild 2712 RMD160 ac453a45e7916fc7d6c92f08d42e99696ae19a49 SHA1 7122c1c252b192d404ec50e0bb7fb1926fb73a18 SHA256 ac83679f48e4eaa4bf9069780727d2b8ee36d6895202194d754aa20035cb1d65
-MISC ChangeLog 17613 RMD160 0fc1cc121e59872063acfdb5baaa7431d83eab10 SHA1 3fe85269a1cdef30429df876a116a3ca1a0487b5 SHA256 fbc6d1395761d3c3dae1f3dc7077981885733c9ad606afb68a37a495beb0c4d6
-MISC metadata.xml 622 RMD160 5f14068a5254ca6b7ebf4a1fab998d2e3f48dabc SHA1 bade5f0ecb07bb731c9bcf6ba3b46b95340a4a41 SHA256 3c565cc6a398326f766b32454d7d5c86e18f5497cd5cd3f38e95b432d0bdb5e2
+MISC ChangeLog 17717 RMD160 5d7c7ece7753829817a8fb842a40bda5bdbe1202 SHA1 e27faffca658dbbe0feccf2a03d23d76b3416113 SHA256 2abd3f3f3e3f912bfa3aef70a2152cd9ee2a7644445b801b990d3f799889fbc5
+MISC metadata.xml 750 RMD160 5fc139b8d3be0eafeb73ddabc68390f394305c81 SHA1 7697b73d8351363a890247dd277791ff6d60c889 SHA256 0ededddd4c20d690666f7769f18083e5c7f4bd4671c87e8f9ff0bc43bef566e4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iQEcBAEBCAAGBQJNUVOuAAoJEMOx0zmdw4Z1eN4IAKkPUqcueBDvKKeMTVhFCBK1
+9FNJkj6mR08/QSc7CVoDEGrEgR8Qjkswix1ZS+U976SncIed4OIuJuVBf9Hyb8YB
+RP6pzY2y+jniGYQSmjXS0f/NE1H3CapERugzLCySkkcb4AyNv3OlMPS/xO8cFdgy
+IigneR8A42G9Xy6ShJAB3G9C6/8ov7Wf47MxPl0/OlSEVHB0sbEkZYBDev97y4Os
+WVbT7x9tbR2IZVWwA+psElrcIHa+jFofNjW74YiBBgjd2E0GjVTYxC+Cg2bvObmR
+qVYlR/rdpyGlihz5QWBigtSWeTMUyUFdtrlpRBTa3rNR+IcBo/lto/2piEFh1e8=
+=qBkY
+-----END PGP SIGNATURE-----
