@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/layman
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.122 2011/02/08 03:53:11 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.123 2011/02/08 14:31:05 idl0r Exp $
+
+  08 Feb 2011; Christian Ruppert <idl0r@gentoo.org> metadata.xml:
+  Update metadata. Take over layman.
 
 *layman-1.4.2 (08 Feb 2011)
 
